im just genna keep .hg as is for now

--- a/F401CC/CMakeLists.txt
+++ b/F401CC/CMakeLists.txt
@@ -64,7 +64,7 @@ ADD_DEFINITIONS(
   -DDEVICE_STDIO_MESSAGES=1
   -DDEVICE_USTICKER=1
   -DDEVICE_WATCHDOG=1
-  -DMBED_BUILD_TIMESTAMP=1599281841.3658419
+  -DMBED_BUILD_TIMESTAMP=1599289775.5500927
   -DSTM32F401xC
   -DTARGET_CORTEX
   -DTARGET_CORTEX_M
@@ -394,12 +394,16 @@ INCLUDE_DIRECTORIES(
   mbed-os/cmsis
   mbed-os
   TARGET_DEVBOARD_F401CC
+  MPU6050IMU
   C:/Users/13676/Documents/GitHub/smartRotate/F401CC/mbed-os
   .
   )
 
 # executable F401CC
 ADD_EXECUTABLE(F401CC
+  MPU6050IMU/MPU6050.cpp
+  MPU6050IMU/MPU6050.h
+  MPU6050IMU/main.cpp
   TARGET_DEVBOARD_F401CC/PeripheralNames.h
   TARGET_DEVBOARD_F401CC/PeripheralPins.c
   TARGET_DEVBOARD_F401CC/PinNames.h
@@ -2577,6 +2581,7 @@ ADD_EXECUTABLE(F401CC
   mbed-os/targets/TARGET_STM/us_ticker.c
   mbed-os/targets/TARGET_STM/us_ticker_defines.h
   mbed-os/targets/TARGET_STM/watchdog_api.c
+  mbed_config.h
   mbed_config.h
   )
 SET_TARGET_PROPERTIES(F401CC PROPERTIES ENABLE_EXPORTS 1)
