remove old MPU6050 lib, I can't fix it so I give up fixing it

--- a/F401CC/CMakeLists.txt
+++ b/F401CC/CMakeLists.txt
@@ -64,7 +64,7 @@ ADD_DEFINITIONS(
   -DDEVICE_STDIO_MESSAGES=1
   -DDEVICE_USTICKER=1
   -DDEVICE_WATCHDOG=1
-  -DMBED_BUILD_TIMESTAMP=1599289775.5500927
+  -DMBED_BUILD_TIMESTAMP=1599322974.2975962
   -DSTM32F401xC
   -DTARGET_CORTEX
   -DTARGET_CORTEX_M
@@ -394,16 +394,18 @@ INCLUDE_DIRECTORIES(
   mbed-os/cmsis
   mbed-os
   TARGET_DEVBOARD_F401CC
-  MPU6050IMU
+  MPU6050
   C:/Users/13676/Documents/GitHub/smartRotate/F401CC/mbed-os
   .
   )
 
 # executable F401CC
 ADD_EXECUTABLE(F401CC
-  MPU6050IMU/MPU6050.cpp
-  MPU6050IMU/MPU6050.h
-  MPU6050IMU/main.cpp
+  MPU6050/I2Cdev.cpp
+  MPU6050/I2Cdev.h
+  MPU6050/MPU6050.cpp
+  MPU6050/MPU6050.h
+  MPU6050/helper_3dmath.h
   TARGET_DEVBOARD_F401CC/PeripheralNames.h
   TARGET_DEVBOARD_F401CC/PeripheralPins.c
   TARGET_DEVBOARD_F401CC/PinNames.h
