it kinda works?

--- a/F401/platformio.ini
+++ b/F401/platformio.ini
@@ -3,6 +3,7 @@ platform = ststm32
 board = genericSTM32F401CC
 framework = stm32cube
 lib_ldf_mode = deep+
+upload_protocol = stlink
 build_flags =
     -I Inc
     -I Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc
@@ -17,6 +18,8 @@ lib_extra_dirs =
 lib_deps =
     Class
     Core
+
+lib_compat_mode = off
 
 [platformio]
 include_dir = Inc
