temporary solution to having out of date HAL

--- a/F401/platformio.ini
+++ b/F401/platformio.ini
@@ -8,12 +8,13 @@ build_flags =
     -I Inc
     -I Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc
     -I Middlewares/ST/STM32_USB_Device_Library/Core/Inc
+#    -I Drivers/STM32F4xx_HAL_Driver/Inc
     -I lib/mpu6050/src
 
 lib_extra_dirs = 
-    Middlewares/ST/STM32_USB_Device_Library/Class
     Middlewares/ST/STM32_USB_Device_Library
     lib/mpu6050/src
+#    Drivers/STM32F4xx_HAL_Driver
 
 lib_deps =
     Class
